// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTimelineItem is rendered 1`] = `
<li
  class="css-1qvj48w-euiTimelineItem-xl"
>
  <div
    class="css-wkasdj-euiTimelineItemIcon-center-xl"
  >
    <div
      class="css-xt9hjx-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user css-1wtzu6n-euiAvatar-m-user-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;

exports[`EuiTimelineItem props EuiAvatar is passed as an icon 1`] = `
<li
  class="css-1qvj48w-euiTimelineItem-xl"
>
  <div
    class="css-wkasdj-euiTimelineItemIcon-center-xl"
  >
    <div
      class="css-xt9hjx-euiTimelineItemIcon__content"
    >
      <div
        aria-label="dot"
        class="euiAvatar euiAvatar--m euiAvatar--user css-1wtzu6n-euiAvatar-m-user-subdued"
        role="img"
        title="dot"
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        >
          dot
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;

exports[`EuiTimelineItem props gap l is rendered 1`] = `
<li
  class="css-v33z4y-euiTimelineItem-l"
>
  <div
    class="css-18i7fvx-euiTimelineItemIcon-center-l"
  >
    <div
      class="css-xt9hjx-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user css-1wtzu6n-euiAvatar-m-user-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;

exports[`EuiTimelineItem props gap m is rendered 1`] = `
<li
  class="css-3s6uj7-euiTimelineItem-m"
>
  <div
    class="css-1q39986-euiTimelineItemIcon-center-m"
  >
    <div
      class="css-xt9hjx-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user css-1wtzu6n-euiAvatar-m-user-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;

exports[`EuiTimelineItem props gap xl is rendered 1`] = `
<li
  class="css-1qvj48w-euiTimelineItem-xl"
>
  <div
    class="css-wkasdj-euiTimelineItemIcon-center-xl"
  >
    <div
      class="css-xt9hjx-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user css-1wtzu6n-euiAvatar-m-user-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;

exports[`EuiTimelineItem props iconAriaLabel is rendered 1`] = `
<li
  class="css-1qvj48w-euiTimelineItem-xl"
>
  <div
    class="css-wkasdj-euiTimelineItemIcon-center-xl"
  >
    <div
      class="css-xt9hjx-euiTimelineItemIcon__content"
    >
      <div
        aria-label="icon aria label"
        class="euiAvatar euiAvatar--m euiAvatar--user css-1wtzu6n-euiAvatar-m-user-subdued"
        role="img"
        title="icon aria label"
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        >
          icon aria label
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;

exports[`EuiTimelineItem props verticalAlign center is rendered 1`] = `
<li
  class="css-1qvj48w-euiTimelineItem-xl"
>
  <div
    class="css-wkasdj-euiTimelineItemIcon-center-xl"
  >
    <div
      class="css-xt9hjx-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user css-1wtzu6n-euiAvatar-m-user-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;

exports[`EuiTimelineItem props verticalAlign top is rendered 1`] = `
<li
  class="css-1qvj48w-euiTimelineItem-xl"
>
  <div
    class="css-1wcd1kr-euiTimelineItemIcon-top-xl"
  >
    <div
      class="css-xt9hjx-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user css-1wtzu6n-euiAvatar-m-user-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;
